--- a/index.html
+++ b/index.html
@@ -13,6 +13,39 @@
                     <div id="app" class="p-5">
                         <h1>Minecraft Cape Creator</h1>
                         <hr>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img :src="imgSrc" class="texture-preview w-100 border"/>
+                            </div>
+                            <div class="col-md-6">
+                                <vue-cropper
+                                    ref="cropper"
+                                    :guides="false"
+                                    :aspect-ratio="10/16"
+                                    @ready="changeImage"
+                                    @cropend="changeImage"
+                                    :src="`https://upload.wikimedia.org/wikipedia/commons/a/a5/Red_Kitten_01.jpg`"
+                                />
+                            </div>
+                            <hr class="my-2">
+                            <div class="col-12">
+                                <div>
+                                    <!-- <h4>Select Image</h4> -->
+                                    <!-- <input type="file" class="form-control" @change="openCropper"> -->
+                                </div>
+                                <br>
+                                <div>
+                                    <h4>Set Color</h4>
+                                    <input type="color" class="form-control" v-model="color" @change="changeColour">
+                                </div>
+                                <br>
+                                <div>
+                                    <h4>Set Scale {{`(${64 * Math.pow(2, scale - 1)} x ${32 * Math.pow(2, scale - 1)})`}}</h4>
+                                    <input type="range" class="form-range" min="1" max="6" step="1" v-model="scale" @change="changeScale">
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
                         <div class="text-center">
                             Created by <a target="_blank" href="https://github.com/james090500">James Harrison</a> for <a target="_blank" href="https://minecraftcapes.net">MinecraftCapes</a>
                             <br>
@@ -23,7 +56,7 @@
             </div>
         </div>
         <style>
-            canvas {
+            .minecraft-skin-viewer {
                 width: 100%;
                 height: 100%;
                 display: block;
@@ -32,17 +65,62 @@
             }
 
             @media (max-width: 576px) {
-                canvas {
+                .minecraft-skin-viewer {
                     height: 50vh;
                 }
             }
+
+            .texture-preview {
+                image-rendering: optimizeSpeed;             /* Legal fallback                 */
+                image-rendering: -moz-crisp-edges;          /* Firefox                        */
+                image-rendering: -o-crisp-edges;            /* Opera                          */
+                image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+                image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+                -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+                image-rendering: pixelated;                 /* Chrome 41+, Firefox            */
+            }
         </style>
         <script type="module">
-            import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js'
-            import axios from 'https://unpkg.com/axios@1.6.7/dist/esm/axios.min.js'
-            import minecraftSkinViewer from 'minecraft-skin-viewer'
+            import { createApp } from 'vue'
+            import VueCropper from 'vue-cropperjs';
+            import 'cropperjs/dist/cropper.css';
+            import MinecraftSkinViewer from 'minecraft-skin-viewer'
+            import MinecraftCapeCreator from './src/main.js'
 
             createApp({
+                data() {
+                    return {
+                        minecraftCapeCreator: new MinecraftCapeCreator(),
+                        file: "",
+                        color: "#FF0000",
+                        scale: 1,
+                        imgSrc: null,
+                    }
+                },
+                mounted() {
+                    this.buildCape()
+                },
+                methods: {
+                    changeImage() {
+                        this.minecraftCapeCreator.setImage(this.$refs.cropper.getCroppedCanvas().toDataURL())
+                        this.buildCape();
+                    },
+                    changeColour() {
+                        this.minecraftCapeCreator.setColor(this.color)
+                        this.buildCape()
+                    },
+                    changeScale() {
+                        this.minecraftCapeCreator.setScale(this.scale)
+                        this.buildCape()
+                    },
+                    buildCape() {
+                        console.log("Building")
+                        this.minecraftCapeCreator.buildCape().then(value => {
+                            this.imgSrc = value;
+                        })
+                    }
+                },
+                components: { VueCropper}
             }).mount('#app')
           </script>
     </body>
