--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body data-bs-theme="dark">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-xl-6 col-md-8 col-12">
+                <div class="col-md-8 col-12">
                     <div id="app" class="p-5">
                         <h1>Minecraft Cape Creator</h1>
                         <hr>
